<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.database.tracker.vehicleverify.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/vehicle_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/lay_toolbar_vehicle">

        <ImageView
            android:tint="@color/white_color"
            android:id="@+id/imgBack"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/vehicle_verification"
            android:textColor="@color/white_color"
            android:textSize="20dp"
            android:gravity="center"
            android:fontFamily="@font/arial_bold"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:paddingBottom="100dp"
            android:paddingHorizontal="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:src="@drawable/iconfront"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"

                android:id="@+id/punjabLay"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/punjab"
                    android:textSize="16sp"
                    android:fontFamily="@font/arial_reg"
                    android:textColor="@color/white_color"
                    android:layout_centerInParent="true"
                   />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/islamLay"
                android:layout_marginTop="20sp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isb"
                    android:textSize="16sp"
                    android:fontFamily="@font/arial_reg"
                    android:textColor="@color/white_color"
                    android:layout_centerInParent="true"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/sindhLay"
                android:layout_marginTop="20sp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sindh"
                    android:fontFamily="@font/arial_reg"
                    android:textSize="16sp"
                    android:textColor="@color/white_color"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/kpkLay"
                android:layout_marginTop="20sp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kpk"
                    android:fontFamily="@font/arial_reg"
                    android:textSize="16sp"
                    android:textColor="@color/white_color"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>


            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewBottomVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_ad_id" />
</RelativeLayout>
