<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/option_background" />

    <RelativeLayout
        android:id="@+id/titleLayIdNotifs"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/black_color">

        <ImageView
            android:id="@+id/backOptionsId"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/option"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
           android:fontFamily="@font/arial_bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:paddingHorizontal="30dp"
            android:gravity="center"
            android:layout_marginBottom="70dp"
            android:paddingBottom="50dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:id="@+id/headerMain"
                android:layout_marginBottom="20dp"
                android:src="@drawable/iconfront"/>


            <RelativeLayout
                android:id="@+id/notificationOptId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/arial_reg"
                    android:text="@string/notification"
                    android:textColor="@color/white_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/privacyOptId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/arial_reg"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/termsOptId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/terms_condi"
                    android:fontFamily="@font/arial_reg"
                    android:textColor="@color/white_color"
                    android:textSize="16sp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rateOptId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_us"
                    android:fontFamily="@font/arial_reg"
                    android:textColor="@color/white_color"
                    android:textSize="16sp"/>
            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>










</RelativeLayout>