<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLay"
    tools:context="com.database.tracker.vehicleverify.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/custom_background"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scroolview"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/lay_main_activity"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="vertical"
                    android:id="@+id/headerMain"
                    android:src="@drawable/iconfront"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/stroke_background"
                    android:orientation="horizontal"
                    android:id="@+id/simLay">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_sim"
                        android:layout_gravity="center"
                        android:tint="@color/white_color"
                        android:layout_marginLeft="30dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sim_database"
                        android:textColor="@color/white_color"
                        android:textSize="18sp"
                        android:layout_marginLeft="20sp"
                        android:fontFamily="@font/arial_reg"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/stroke_background"
                    android:orientation="horizontal"
                    android:id="@+id/vehicleLay">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_car_reg"
                        android:layout_gravity="center"
                        android:tint="@color/white_color"
                        android:layout_marginLeft="30dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_verification"
                        android:textColor="@color/white_color"
                        android:textSize="18sp"
                        android:layout_marginLeft="20sp"
                        android:fontFamily="@font/arial_reg"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/stroke_background"
                    android:orientation="horizontal"
                    android:id="@+id/currencyLay">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_currency_exchange_eurro"
                        android:layout_gravity="center"
                        android:tint="@color/white_color"
                        android:layout_marginLeft="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency_converter"
                        android:textColor="@color/white_color"
                        android:textSize="16sp"
                        android:layout_marginLeft="20sp"
                        android:fontFamily="@font/arial_reg"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:background="@drawable/option_stroke_background"
                        android:orientation="horizontal"
                        android:id="@+id/notificationMainId">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/option"
                            android:textColor="@color/white_color"
                            android:textSize="18sp"
                            android:fontFamily="@font/arial_reg"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>


        </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

    <com.facebook.ads.NativeAdLayout
        android:id="@+id/native_ad_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/scroolview"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="15dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical" />





   <!-- <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_ad_id" />
-->



    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        />
</RelativeLayout>

